--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
-        "inc.h": "c"
+        "inc.h": "c",
+        "ctype.h": "c",
+        "inet.h": "c"
     }
 }
