clean(): replacing some libc function by mine

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "files.associations": {
         "inc.h": "c",
         "ctype.h": "c",
-        "inet.h": "c"
+        "inet.h": "c",
+        "str_cpy": "c",
+        "stddef.h": "c"
     }
 }
